# STimer

./: .gitignore  CMakeLists.txt  README.md  Todo.md
include/core/: application.h  httpclient.h  layout.h  widget.h  window.h
include/widget/: button.h
include/widget/layout/: horizontal.h  vertical.h
include/window/: main.h
src/: CMakeLists.txt  imgui_impl_sdl3.cpp  imgui_impl_sdlgpu3.cpp  main.cpp
src/core/: application.cpp  httpclient.cpp  layout.cpp  widget.cpp  window.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdlrenderer3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/widget/: button.cpp
src/widget/layout/: horizontal.cpp  vertical.cpp
src/window/: main.cpp  settings.cpp
