add_executable(${PROJECT_NAME}
    #
    core/window.cpp
    core/widget.cpp
    core/application.cpp
    core/httpclient.cpp
    core/layout.cpp
    #
    widget/button.cpp
    widget/layout/horizontal.cpp
    widget/layout/vertical.cpp
    #
    window/main.cpp
    window/settings.cpp
    # ----
    Main.cpp
)
